<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_view_favorites"
        android:title="@string/favorites_show"
        android:icon="@drawable/star"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove_favorites"
        android:title="@string/remove_all_favorites"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_fake_favorites"
        android:title="@string/add_random_favorites"
        app:showAsAction="never"/>
</menu>