<resources>
    <string name="app_name">GeoCodingAddressSearch</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_an_address">Enter an address, place, etc</string>
    <string name="loading_address">Loading Address…</string>
    <string name="cd_locations_list">Locations list</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove_all_favorites">Remove all favorites</string>
    <string name="add_random_favorites">Add random favorites</string>
    <string name="favorites_show">Show favorites</string>
    <string name="placeholder_nothing">%s</string>
    <string name="placeholder_marker">%s, %s/%s</string>
    <string name="no_results_found">No results found!</string>
    <string name="show_all_on_map">SHOW ALL ON MAP</string>
    <string name="locations_added">Locations added!</string>
    <string name="google_maps_geocode_key" templateMergeStrategy="preserve" translatable="true">      AIzaSyAPZHy03muq8su2DGjqRHeO92Y3Sitdxj4</string>
</resources>
